--- a/work.html
+++ b/work.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Work Tasks</title>
+<link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css" rel="stylesheet">
 <style>
 body { font-family: 'Segoe UI', Tahoma, sans-serif; margin:0; padding:0; }
 header {
@@ -35,6 +37,23 @@ section { padding:1rem; border-bottom:10px solid pink; }
 .importance-medium{ font-style:italic; }
 .importance-medium-low{ opacity:0.8; }
 .importance-low{ opacity:0.6; }
+.calendar-container{display:flex;gap:1rem;flex-wrap:wrap;}
+#calendar{flex:1 1 300px;min-width:300px;}
+#calendarTaskList{flex:1 1 200px;min-width:200px;border:1px solid #ccc;padding:0.5rem;max-height:400px;overflow-y:auto;}
+.fc-task{background:#f4f4f4;margin:0.25rem 0;padding:0.25rem;border:1px solid #ccc;cursor:grab;}
+.subtoggle{font-size:0.9rem;margin-top:0.5rem;}
+.meeting-grid{display:flex;gap:1rem;flex-wrap:wrap;align-items:flex-start;}
+.meeting-col{flex:1 1 200px;min-width:200px;}
+.meeting-card{border:1px solid #ccc;padding:0.5rem;margin:0.25rem 0;border-radius:4px;cursor:pointer;}
+.meeting-past{background:#f0f0f0;}
+.meeting-today{background:#d0ffd0;}
+.meeting-upcoming{background:#f0f8ff;}
+.modal{position:fixed;top:0;left:0;width:100%;height:100%;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,0.5);}
+.modal-content{background:#fff;padding:1rem;border-radius:4px;max-width:90%;width:320px;}
+.modal-content input,.modal-content textarea,.modal-content select{width:100%;margin-bottom:0.5rem;}
+@media (max-width: 600px) {
+  html { font-size: 14px; }
+}
 </style>
 </head>
 <body>
@@ -43,6 +62,8 @@ section { padding:1rem; border-bottom:10px solid pink; }
     <div id="nav-placeholder"></div>
   </header>
   <script src="nav-loader.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@5.11.3/main.min.js"></script>
 
   <section>
     <div class="toggle section-header" onclick="toggle('projSection')">Projects</div>
@@ -104,11 +125,63 @@ section { padding:1rem; border-bottom:10px solid pink; }
     </div>
   </section>
 
-<script>
+  <section>
+    <div class="toggle section-header" onclick="toggle('calendarSection')">Calendar</div>
+    <div id="calendarSection" class="hidden">
+      <div class="calendar-container">
+        <div id="calendar"></div>
+        <div>
+          <h3>Tasks</h3>
+          <div id="calendarTaskList"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="toggle section-header" onclick="toggle('meetingSection')">Meetings</div>
+    <div id="meetingSection" class="hidden">
+      <button onclick="openMeetingModal()">Add Meeting</button>
+      <div id="meetingColumns" class="meeting-grid"></div>
+      <div style="margin-top:1rem;">
+        <div class="toggle subtoggle" onclick="toggle('allMeetings')">View All Meetings</div>
+        <div id="allMeetings" class="hidden meeting-grid"></div>
+      </div>
+    </div>
+  </section>
+
+  <div id="meetingModal" class="modal hidden">
+    <div class="modal-content">
+      <label>Title<input id="meetTitle"></label>
+      <label>Project<select id="meetProject"></select></label>
+      <label>Date<input type="date" id="meetDate"></label>
+      <label>Attendees<textarea id="meetAttendees"></textarea></label>
+      <label>Content<textarea id="meetContent"></textarea></label>
+      <label>Outcomes<textarea id="meetOutcomes"></textarea></label>
+      <div id="attachList"></div>
+      <input id="attachInput" placeholder="Attachment URL"><button onclick="addAttachment()">Add</button>
+      <div style="text-align:right;margin-top:0.5rem;">
+        <button onclick="saveMeeting()">Save</button>
+        <button onclick="deleteMeeting()">Delete</button>
+        <button onclick="addFollowUp()">Add Follow-Up</button>
+        <button onclick="addOutcomeTask()">Add as Task</button>
+        <button onclick="closeMeetingModal()">Close</button>
+      </div>
+    </div>
+    </div>
+  </div>
+
+  <script>
 let dataStore = {};
 let workProjects = [];
 let workTasks = [];
 let workNextId = 1;
+let calendarEvents = [];
+let calendarNextId = 1;
+let calendar;
+let meetings = [];
+let meetingNextId = 1;
+let currentMeeting = null;
 
 function toggle(id){
   document.getElementById(id).classList.toggle('hidden');
@@ -131,8 +204,15 @@ async function loadData(){
     workProjects = dataStore.workProjects || [];
     workTasks = dataStore.workTasks || [];
     workNextId = dataStore.workNextId || 1;
+    calendarEvents = dataStore.calendarEvents || [];
+    calendarNextId = dataStore.calendarNextId || 1;
+    meetings = dataStore.meetings || [];
+    meetingNextId = dataStore.meetingNextId || 1;
     renderProjects();
     renderTasks();
+    renderCalendarTasks();
+    renderMeetings();
+    initCalendar();
   }catch(e){ console.error('load fail',e); }
 }
 
@@ -140,6 +220,10 @@ async function saveData(){
   dataStore.workProjects = workProjects;
   dataStore.workTasks = workTasks;
   dataStore.workNextId = workNextId;
+  dataStore.calendarEvents = calendarEvents;
+  dataStore.calendarNextId = calendarNextId;
+  dataStore.meetings = meetings;
+  dataStore.meetingNextId = meetingNextId;
   try{
     await fetch('/api/work-data',{method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(dataStore)});
   }catch(e){ console.error('save fail',e); }
@@ -152,6 +236,7 @@ function addWorkProject(){
   workProjects.push({name,color});
   document.getElementById('workProjectName').value='';
   renderProjects();
+  renderMeetings();
   saveData();
 }
 
@@ -318,10 +403,169 @@ function renderTasks(){
         const sctrl=document.createElement('div'); sctrl.className='controls';
         const scomp=document.createElement('button'); scomp.textContent='Complete'; scomp.onclick=()=>{st.status='closed'; saveData(); renderTasks();};
         const sdel=document.createElement('button'); sdel.textContent='Delete'; sdel.onclick=()=>{t.subtasks=t.subtasks.filter(x=>x!==st); saveData(); renderTasks();};
-        sctrl.appendChild(scomp); sctrl.appendChild(sdel); srow.appendChild(sctrl); list.appendChild(srow);
-      });
-    }
+      sctrl.appendChild(scomp); sctrl.appendChild(sdel); srow.appendChild(sctrl); list.appendChild(srow);
+    });
+  }
   });
+  renderCalendarTasks();
+}
+
+function renderCalendarTasks(){
+  const cont=document.getElementById('calendarTaskList');
+  cont.innerHTML='';
+  workTasks.filter(t=>t.status==='open').forEach(t=>{
+    const div=document.createElement('div');
+    div.className='fc-task';
+    div.textContent=t.name;
+    div.dataset.id=t.id;
+    div.dataset.title=t.name;
+    cont.appendChild(div);
+  });
+  new FullCalendar.Draggable(cont,{itemSelector:'.fc-task',eventData:el=>({title:el.dataset.title,taskId:el.dataset.id})});
+}
+
+function initCalendar(){
+  const el=document.getElementById('calendar');
+  calendar=new FullCalendar.Calendar(el,{
+    initialView:'dayGridMonth',
+    height:'auto',
+    editable:true,
+    droppable:true,
+    eventDurationEditable:true,
+    events:calendarEvents,
+    eventReceive:info=>{
+      info.event.setProp('id',String(calendarNextId++));
+      info.event.setExtendedProp('taskId',info.draggedEl.dataset.id);
+      saveCalendar();
+    },
+    eventDrop:saveCalendar,
+    eventResize:saveCalendar,
+    eventClick:info=>{ if(confirm('Remove this scheduled task?')){ info.event.remove(); saveCalendar(); } }
+  });
+  calendar.render();
+}
+
+function saveCalendar(){
+  calendarEvents=calendar.getEvents().map(ev=>({id:ev.id,title:ev.title,start:ev.startStr,end:ev.endStr,taskId:ev.extendedProps.taskId||''}));
+  saveData();
+}
+
+function meetingStatus(date){
+  const today=new Date().toISOString().slice(0,10);
+  if(!date) return 'meeting-upcoming';
+  if(date<today) return 'meeting-past';
+  if(date===today) return 'meeting-today';
+  return 'meeting-upcoming';
+}
+
+function renderMeetings(){
+  const colsCont=document.getElementById('meetingColumns');
+  const allCont=document.getElementById('allMeetings');
+  colsCont.innerHTML='';
+  allCont.innerHTML='';
+  const projects=[...workProjects.map(p=>p.name), 'Ad Hoc'];
+  projects.forEach(name=>{
+    const col=document.createElement('div');
+    col.className='meeting-col';
+    col.innerHTML='<h3>'+name+'</h3>';
+    meetings.filter(m=> (m.project||'Ad Hoc')===name).forEach(m=>{
+      const card=document.createElement('div');
+      card.className='meeting-card '+meetingStatus(m.date);
+      card.textContent=m.title;
+      card.onclick=()=>openMeetingModal(m.id);
+      col.appendChild(card);
+      allCont.appendChild(card.cloneNode(true));
+    });
+    colsCont.appendChild(col);
+  });
+}
+
+function openMeetingModal(id){
+  if(id){
+    currentMeeting=meetings.find(m=>m.id===id);
+  }else{
+    currentMeeting={id:String(meetingNextId++),title:'',project:'',date:'',attendees:'',content:'',outcomes:'',attachments:[],followupOf:null};
+    meetings.push(currentMeeting);
+  }
+  const projSel=document.getElementById('meetProject');
+  projSel.innerHTML='<option value="">Ad Hoc</option>';
+  workProjects.forEach(p=>{const o=document.createElement('option');o.value=p.name;o.textContent=p.name;projSel.appendChild(o);});
+  document.getElementById('meetTitle').value=currentMeeting.title;
+  document.getElementById('meetProject').value=currentMeeting.project;
+  document.getElementById('meetDate').value=currentMeeting.date;
+  document.getElementById('meetAttendees').value=currentMeeting.attendees;
+  document.getElementById('meetContent').value=currentMeeting.content;
+  document.getElementById('meetOutcomes').value=currentMeeting.outcomes;
+  renderAttachments();
+  document.getElementById('meetingModal').classList.remove('hidden');
+}
+
+function closeMeetingModal(){
+  document.getElementById('meetingModal').classList.add('hidden');
+}
+
+function renderAttachments(){
+  const list=document.getElementById('attachList');
+  list.innerHTML='';
+  if(!currentMeeting.attachments) currentMeeting.attachments=[];
+  currentMeeting.attachments.forEach((a,i)=>{
+    const div=document.createElement('div');
+    const link=document.createElement('a');
+    link.href=a; link.textContent=a; link.target='_blank';
+    const del=document.createElement('button');
+    del.textContent='x';
+    del.style.marginLeft='0.25rem';
+    del.onclick=()=>{currentMeeting.attachments.splice(i,1);renderAttachments();};
+    div.appendChild(link); div.appendChild(del);
+    list.appendChild(div);
+  });
+}
+
+function addAttachment(){
+  const url=document.getElementById('attachInput').value.trim();
+  if(url){ currentMeeting.attachments.push(url); document.getElementById('attachInput').value=''; renderAttachments(); }
+}
+
+function saveMeeting(){
+  currentMeeting.title=document.getElementById('meetTitle').value.trim();
+  currentMeeting.project=document.getElementById('meetProject').value;
+  currentMeeting.date=document.getElementById('meetDate').value;
+  currentMeeting.attendees=document.getElementById('meetAttendees').value;
+  currentMeeting.content=document.getElementById('meetContent').value;
+  currentMeeting.outcomes=document.getElementById('meetOutcomes').value;
+  saveData();
+  renderMeetings();
+  closeMeetingModal();
+}
+
+function deleteMeeting(){
+  if(!currentMeeting) return;
+  if(confirm('Delete meeting?')){
+    meetings=meetings.filter(m=>m!==currentMeeting);
+    saveData();
+    renderMeetings();
+    closeMeetingModal();
+  }
+}
+
+function addFollowUp(){
+  const date=prompt('Follow-up date (YYYY-MM-DD)', '');
+  if(!date) return;
+  const follow={id:String(meetingNextId++),title:currentMeeting.title,project:currentMeeting.project,date,attendees:currentMeeting.attendees,content:currentMeeting.outcomes, outcomes:'',attachments:[],followupOf:currentMeeting.id};
+  meetings.push(follow);
+  saveData();
+  renderMeetings();
+  alert('Follow-up created');
+}
+
+function addOutcomeTask(){
+  const ta=document.getElementById('meetOutcomes');
+  const text=ta.value.substring(ta.selectionStart, ta.selectionEnd) || ta.value;
+  if(!text.trim()) return;
+  const task={id:String(workNextId).padStart(8,'0'),name:text.trim(),project:currentMeeting.project,dueDate:'',importance:'Medium',urgency:'Medium',recurring:false,frequency:null,interval:null,from:null,status:'open',subtasks:[],notes:'from meeting '+currentMeeting.id};
+  workNextId++; workTasks.push(task);
+  saveData();
+  renderTasks();
 }
 
 loadData();
